--- a/FynzoSurvey/ViewControllers/Form/CardCollectionViewCell/CardInnerCollectionViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/CardCollectionViewCell/CardInnerCollectionViewCell.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,38 +20,42 @@
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p9M-1T-jO4" customClass="FormButton" customModule="FynzoSurvey" customModuleProvider="target">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z01-Vz-tjA">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <state key="normal" title="1">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </state>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" name="textfieldBackgroundColor"/>
+                        <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                <real key="value" value="1"/>
+                                <real key="value" value="2"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                <real key="value" value="2"/>
+                                <real key="value" value="1"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
                                 <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
-                    </button>
+                    </label>
                 </subviews>
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="p9M-1T-jO4" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="49Q-s6-A2c"/>
-                <constraint firstAttribute="trailing" secondItem="p9M-1T-jO4" secondAttribute="trailing" id="5CH-QT-kRL"/>
-                <constraint firstAttribute="bottom" secondItem="p9M-1T-jO4" secondAttribute="bottom" id="9QG-kZ-mKX"/>
-                <constraint firstItem="p9M-1T-jO4" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9Ru-hg-9YY"/>
+                <constraint firstAttribute="trailing" secondItem="z01-Vz-tjA" secondAttribute="trailing" id="R1W-KX-EFE"/>
+                <constraint firstItem="z01-Vz-tjA" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="c2y-DX-xEe"/>
+                <constraint firstAttribute="bottom" secondItem="z01-Vz-tjA" secondAttribute="bottom" id="p1O-mF-1hx"/>
+                <constraint firstItem="z01-Vz-tjA" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="rUd-r8-hSl"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
-                <outlet property="titleButton" destination="p9M-1T-jO4" id="Km4-xO-RrE"/>
+                <outlet property="label" destination="z01-Vz-tjA" id="5y9-rO-Ptd"/>
             </connections>
             <point key="canvasLocation" x="47.826086956521742" y="34.821428571428569"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <namedColor name="textfieldBackgroundColor">
+            <color red="0.93725490196078431" green="0.94509803921568625" blue="0.95686274509803926" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
