--- a/FynzoSurvey/ViewControllers/Form/CircleCheckBoxCollectionViewCell/CheckBoxInnerCollectionViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/CircleCheckBoxCollectionViewCell/CheckBoxInnerCollectionViewCell.xib
@@ -19,39 +19,38 @@
                 <rect key="frame" x="0.0" y="0.0" width="200" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60I-C0-gYc" customClass="FormButton" customModule="FynzoSurvey" customModuleProvider="target">
-                        <rect key="frame" x="60" y="5" width="32" height="40"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <state key="normal" title="Abc">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </state>
-                    </button>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filled_tick" translatesAutoresizingMaskIntoConstraints="NO" id="COV-gs-2hL">
-                        <rect key="frame" x="24" y="10" width="30" height="30"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="radio_empty" translatesAutoresizingMaskIntoConstraints="NO" id="COV-gs-2hL">
+                        <rect key="frame" x="15" y="10" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="o1N-au-g0r"/>
                             <constraint firstAttribute="height" constant="30" id="vf5-U3-Dml"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ScS-bG-1Qm">
+                        <rect key="frame" x="51" y="5" width="42" height="40"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="60I-C0-gYc" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="4Ox-xl-ImZ"/>
-                <constraint firstItem="60I-C0-gYc" firstAttribute="leading" secondItem="COV-gs-2hL" secondAttribute="trailing" constant="6" id="7gm-uS-kc9"/>
-                <constraint firstAttribute="bottom" secondItem="60I-C0-gYc" secondAttribute="bottom" constant="5" id="CiJ-7x-1xL"/>
-                <constraint firstItem="60I-C0-gYc" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="PMW-RM-MZ5"/>
-                <constraint firstItem="60I-C0-gYc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="60" id="ddu-3v-CcM"/>
+                <constraint firstAttribute="bottom" secondItem="ScS-bG-1Qm" secondAttribute="bottom" constant="5" id="BaD-sb-WbI"/>
+                <constraint firstItem="COV-gs-2hL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="15" id="CrT-v1-RMV"/>
+                <constraint firstItem="ScS-bG-1Qm" firstAttribute="leading" secondItem="COV-gs-2hL" secondAttribute="trailing" constant="6" id="FAB-Z1-vkf"/>
                 <constraint firstItem="COV-gs-2hL" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="r2G-r2-M2V"/>
+                <constraint firstItem="ScS-bG-1Qm" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="wbo-Cq-qKy"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
-                <outlet property="titleButton" destination="60I-C0-gYc" id="exc-xA-uc6"/>
+                <outlet property="imageView" destination="COV-gs-2hL" id="ZsD-22-MZa"/>
+                <outlet property="title" destination="ScS-bG-1Qm" id="CKX-LH-WJo"/>
             </connections>
             <point key="canvasLocation" x="50.724637681159422" y="119.86607142857142"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="filled_tick" width="20" height="20"/>
+        <image name="radio_empty" width="64" height="64"/>
     </resources>
 </document>
