--- a/FynzoSurvey/ViewControllers/Form/StarCollectionViewCell/StarTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/StarCollectionViewCell/StarTableViewCell.xib
@@ -48,6 +48,8 @@
                             <userDefinedRuntimeAttribute type="number" keyPath="rating">
                                 <real key="value" value="0.0"/>
                             </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="image" keyPath="emptyImage" value="star_inactive"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="filledImage" value="star_active"/>
                         </userDefinedRuntimeAttributes>
                     </view>
                 </subviews>
@@ -72,4 +74,8 @@
             <point key="canvasLocation" x="47.826086956521742" y="34.821428571428569"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="star_active" width="100" height="100"/>
+        <image name="star_inactive" width="100" height="100"/>
+    </resources>
 </document>
