--- a/FynzoSurvey/ViewControllers/Form/TextFieldCollectionViewCell/TextfieldTableViewCell.xib
+++ b/FynzoSurvey/ViewControllers/Form/TextFieldCollectionViewCell/TextfieldTableViewCell.xib
@@ -34,8 +34,8 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="s70-W0-k80"/>
                         </constraints>
-                        <nil key="textColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <textInputTraits key="textInputTraits"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
